@@ -1,3 +1,7 @@
+2007-10-26  Albert Chu  <chu11@llnl.gov>
+
+	* src/libs/cerebro/cerebro.c: Fix error message corner case.
+	
 2007-10-25  Albert Chu  <chu11@llnl.gov>
 
 	* man/Makefile.am: Install cerebro.1 manpage in man1 instead of
@@ -6,7 +10,7 @@
 	* man/cerebro.conf.5.in: Add forgotten new fields.
 
 	* man/cerebro_module_devel.3.in: Add forgotten module interface changes.
-	
+
 2007-10-24  Albert Chu  <chu11@llnl.gov>
 
 	* src/cerebro-stat/cerebro-stat.c (main): Fix minor output corner
